--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>&#127752;</text></svg>"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
   <body>
     <noscript> You need JavaScript to run this ! </noscript>
     <div id="root"></div>
     <script type="module" src="./src/index.jsx"></script>
   </body>
-</html>
+</html> 
